--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.7.2",
+    "firebase": "^5.8.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1"
   },
@@ -19,6 +21,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-buefy": "^0.3.4",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
